// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component should not render when open prop is falsy 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.6);
  z-index: 1000;
  display: none;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1 {
  background: #F7F7F7;
  padding: 32px 64px;
  border-radius: 5px;
  width: 50%;
  height: auto;
  max-height: 80%;
  overflow: hidden;
  overflow-y: auto;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  font-size: 16px;
}

.c5.c5.c5 * {
  fill: #012040;
}

.c4 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #012040;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c3 {
  padding: 0px;
  margin-right: -24px;
}

.c2 {
  color: #012040;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h1>
          Demo Header
        </h1>
        <button
          class="c3 c4"
          color="primary"
          data-testid="modal-close-button"
        >
          <svg
            class="c5"
            height="1em"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0 7 5.59 1.41 0 0 1.41 5.59 7 0 12.59 1.41 14 7 8.41 12.59 14 14 12.59 8.41 7z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        class=""
      >
        Demo Content
      </div>
      <div
        class="c6"
      >
        Demo Actions
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal component should render properly when it is open 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.6);
  z-index: 1000;
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1 {
  background: #F7F7F7;
  padding: 32px 64px;
  border-radius: 5px;
  width: 50%;
  height: auto;
  max-height: 80%;
  overflow: hidden;
  overflow-y: auto;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  font-size: 16px;
}

.c6.c6.c6 * {
  fill: #012040;
}

.c3 {
  font-size: 24px;
  font-weight: 700;
  color: inherit;
}

.c5 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #012040;
}

.c5:hover {
  cursor: pointer;
}

.c5:focus {
  outline: none;
}

.c5:disabled {
  cursor: not-allowed;
}

.c4 {
  padding: 0px;
  margin-right: -24px;
}

.c2 {
  color: #012040;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

<div>
  <div
    class="c0"
    open=""
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <strong
          class="c3"
        >
          Add User
        </strong>
        <button
          class="c4 c5"
          color="primary"
          data-testid="modal-close-button"
        >
          <svg
            class="c6"
            height="1em"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0 7 5.59 1.41 0 0 1.41 5.59 7 0 12.59 1.41 14 7 8.41 12.59 14 14 12.59 8.41 7z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        class=""
      >
        Demo Content
      </div>
      <div
        class="c7"
      >
        Demo Actions
      </div>
    </div>
  </div>
</div>
`;
